# dgouveia-tcc-ceiot

./: variaveis.sh
api-consumo/: pyproject.toml
api-consumo/api_consumo/: api.py
api-consumo/tests/: test_api_consumo.py
consumidor-amqp/: pyproject.toml
consumidor-amqp/consumidor_amqp/: tcc-consumer-amqp.py
consumidor-amqp/tests/: test_consumidor_amqp.py
consumidor-mqtt-producer-amqp/: pyproject.toml
consumidor-mqtt-producer-amqp/consumidor_mqtt_producer_amqp/: tcc-consumer-mqtt-producer-amqp.py
consumidor-mqtt-producer-amqp/tests/: test_consumidor_mqtt_producer_amqp.py
contiki/: placa-tcc.c
robos-mqtt/: pyproject.toml
robos-mqtt/robos_mqtt/: tcc-mqtt-bots.py
robos-mqtt/tests/: test_robos_mqtt.py
smartfarm/: pubspec.yaml
smartfarm/android/app/: build.gradle
smartfarm/android/app/src/main/: AndroidManifest.xml
smartfarm/ios/Runner/: Info.plist
smartfarm/lib/: main.dart
smartfarm/macos/Runner/Configs/: AppInfo.xcconfig
smartfarm/test/: widget_test.dart
